Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/serial/SerialWarn.out
SerialWarn.java:11:1: compiler.warn.missing.SVUID: SerialWarn
- compiler.err.warnings.and.werror
1 error
1 warning
